--- a/webfiles/index.html
+++ b/webfiles/index.html
@@ -10,7 +10,7 @@
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f3f4f6; /* Light gray background */
-            color: #374151; /* Dark gray text */
+            color: #374151; /* Dark gray text123 */
         }
         .container {
             max-width: 1000px;
